Code cleanup (imports, etc.)