@@ -302,7 +302,7 @@ public class ShollAnalyzer {
 	public static void main(final String[] args) throws InterruptedException {
 		final ImageJ ij = new ImageJ();
 		final SNTService sntService = ij.context().getService(SNTService.class);
-		final Tree tree = sntService.demoTrees().get(0);
+		final Tree tree = sntService.demoTrees().getFirst();
 		//final Tree tree = new Tree("/home/tferr/code/morphonets/SNT/clustering/zi/cells/AA0768.json", "axon");
 		final ShollAnalyzer analyzer = new ShollAnalyzer(tree);
 		analyzer.setPolynomialFitRange(2, 70);
