@@ -357,7 +357,7 @@ public class PathTimeAnalysisCmd extends CommonDynamicCmd {
 		GuiUtils.LAF.setLookAndFeel();
 		ij.ui().showUI();
 		final SNTService sntService = ij.context().getService(SNTService.class);
-		final Tree tree = sntService.demoTrees().get(0);
+		final Tree tree = sntService.demoTrees().getFirst();
 		final Map<String, Object> input = new HashMap<>();
 		input.put("paths", tree.list());
 		ij.command().run(PathTimeAnalysisCmd.class, true, input);
